# advent-of-code-2020

./: .gitignore  README.md  tsconfig.json
.github/workflows/: ci.yml
2020/day1/: part2.js
2020/day10/: part1.js  part2.js
2020/day12/: part2.js
2020/day13/: part1.js
2020/day2/: part1.js
2020/day5/: part1.js
2020/day9/: part2.js
2021/day1/: part1.js
2021/day10/: part1.ts
2021/day11/: part1.ts  part2.ts
2021/day14/: README.md  part1.ts
2021/day15/: Graph.ts  PriorityQueue.ts  README.md  example.ts  input.ts  part1.ts  part2.ts
2021/day16/: README.md  input.ts  part1.ts  part2.ts
2021/day17/: README.md  input.ts  part1.ts  part2.ts
2021/day18/: input.ts
2021/day5/: README.md  part1.ts  part2.ts
2021/day6/: part1.ts
2021/day7/: part2.ts
2021/day8/: README.md  example.ts  part1.ts
2021/day9/: part1.ts  part2.ts
2022/day1/: input.ts  part2.ts
day10/: README.md  part2.js
day11/: part2.js
day12/: part1.js
day13/: part2.js
day2-nd/: part1.js
day3/: part1.js
day4/: part1.js  part2.js
day5/: part2.js
day6/: part2.js
day8/: part1.js  part2-1.js
day9/: part1.js
js/2021/day10/: example.js  example.js.map  part1.js  part1.js.map  part2.js  part2.js.map
js/2021/day11/: part1.js  part1.js.map  (+2 more)
js/tools/: Graph.js  Graph.js.map  PriorityQueue.js  PriorityQueue.js.map
rust/: .gitignore  Cargo.toml
rust/src/: helpers.rs
rust/src/examples/: 04.txt
tools/: Graph.ts  PriorityQueue.ts
ts/: .eslintrc.js  bun.lockb  helper.ts  package.json
ts/2020/: README.md
yr2024/day1/: README.md  part1.ts  part2.ts  puzzle.md
(+109 files in other folders)
