[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Eliot Hertenstein"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
pico-args = "0.5.0"
regex = "1"
